fixed Tooltip on mobile (title)

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,12 +11,6 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  /* background: url('./images/bgImage.webp'); */
-  /* background-image: url('./images/bgImage.webp'); */
-  /* background: red; */
-  background-image: unset;
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 .wallpaperNav {
@@ -25,13 +19,6 @@
   z-index: 2 !important;
   width: 100% !important;
   height: 100% !important;
-  /* background-image: url('./images/bgImage.webp'); */
-  background-image: unset;
-  background: #808080; /* gray */
-  /* background: #00008b; */
-
-  background-size: cover;
-  background-repeat: no-repeat;
   clip-path: polygon(0% 0, 100% 0%, 100% 100px, 0 100px); /* CROP THE BAVBAR IMAGE */
 }
 
